# academic-library

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  Taskfile.yml  compose.yml
.mise/: config.toml
assets/: main.css  tailwind.css
db/: Dockerfile  Taskfile.db.yml
db/data/: books.db  books.db-shm  books.db-wal
db/migrations/: 20251124101354_books.sql  20251124101355_seed_books.sql
src/: actions.rs  books.rs  db.rs  main.rs  validation.rs
