[package]
name = "academic-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.5"
dioxus = { version = "0.7.0", features = ["fullstack", "router"] }
dioxus-sdk = { version = "0.7.0", features = ["time"] }
dotenvy = { version = "0.15.7", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dep:dotenvy", "dep:sqlx", "dioxus/server"]
web = ["dioxus/web"]
